<resources>
    <string name="app_name">PaperGram</string>
    <string name="navigation_drawer_open">Apri menu navigazione</string>
    <string name="navigation_drawer_close">Chiudi menu navigazione</string>
    <string name="nav_header_greeting">Ciao 👋, %1$s!</string>
    <string name="nav_header_desc">Header navigazione</string>
    <string name="menu_home">Feed</string>
    <string name="salva_paper">Salva paper</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="paper_salvati">Paper Salvati</string>
    <string name="categorie">Categorie</string>
    <string name="save_preferences">Salva Preferenze</string>
    <string name="error_select_one_category">Devi selezionare almeno una categoria.</string>
    <string name="Settings">Impostazioni</string>
    <string name="aggiungi_un_commento">Aggiungi un commento</string>
    <string name="scegli_i_tuoi_interessi">Scegli i tuoi interessi</string>
    <string name="end">FATTO</string>
    <string name="skip">Salta per ora</string>
    <string name="name">Come ti chiami?</string>
    <string name="continua">Continua</string>
    <string name="no_paper">Nessun paper salvato</string>
    <string name="save_name">Salva Nome</string>
    <string name="theme_app">Tema Applicazione</string>
    <string name="white">Chiaro</string>
    <string name="dark">Scuro</string>
    <string name="system_pred">Predefinito di sistema</string>
    <string name="reply">Rispondi</string>
    <string name="like">Like</string>
    <string name="chip_comments">Commenti</string>
    <string name="remove_fav">Rimuovi dai salvati</string>
    <string name="language">Lingua</string>
    <string name="select_lang">Seleziona Lingua</string>

    <string name="cat_main_computer_science">Informatica</string>
    <string name="cat_cs_ai">Intelligenza Artificiale</string>
    <string name="cat_cs_ar">Hardware, Software e Architettura</string>
    <string name="cat_cs_cc">Complessità Computazionale</string>
    <string name="cat_cs_ce">Ingegneria, Finanza e Scienza Computazionale</string>
    <string name="cat_cs_cg">Geometria Computazionale</string>
    <string name="cat_cs_gt">Informatica e Teoria dei Giochi</string>
    <string name="cat_cs_cv">Visione Artificiale e Riconoscimento Pattern</string>
    <string name="cat_cs_cy">Informatica e Società</string>
    <string name="cat_cs_cr">Crittografia e Sicurezza</string>
    <string name="cat_cs_db">Database</string>
    <string name="cat_cs_dc">Calcolo Distribuito, Parallelo e Cluster</string>
    <string name="cat_cs_dl">Biblioteche Digitali</string>
    <string name="cat_cs_ds">Strutture Dati e Algoritmi</string>
    <string name="cat_cs_et">Tecnologie Emergenti</string>
    <string name="cat_cs_fl">Linguaggi Formali e Teoria degli Automi</string>
    <string name="cat_cs_gr">Grafica</string>
    <string name="cat_cs_hc">Interazione Uomo-Computer</string>
    <string name="cat_cs_ir">Recupero dell\'Informazione</string>
    <string name="cat_cs_lg">Apprendimento Automatico</string>
    <string name="cat_cs_pl">Linguaggi di Programmazione</string>
    <string name="cat_cs_ro">Robotica</string>
    <string name="cat_cs_se">Ingegneria del Software</string>
    <string name="cat_cs_cl">Elaborazione del Linguaggio</string>

    <string name="cat_main_physics">Fisica</string>
    <string name="cat_astro_ph">Astrofisica</string>
    <string name="cat_cond_mat">Materia Condensata</string>
    <string name="cat_gr_qc">Relatività Generale e Cosmologia Quantistica</string>
    <string name="cat_hep_ex">Fisica delle Alte Energie - Esperimenti</string>
    <string name="cat_hep_lat">Fisica delle Alte Energie - Reticolo</string>
    <string name="cat_hep_ph">Fisica delle Alte Energie - Fenomenologia</string>
    <string name="cat_hep_th">Fisica delle Alte Energie - Teoria</string>
    <string name="cat_math_ph">Fisica Matematica</string>
    <string name="cat_nucl_ex">Fisica Nucleare - Esperimenti</string>
    <string name="cat_nucl_th">Fisica Nucleare - Teoria</string>
    <string name="cat_physics">Fisica</string>
    <string name="cat_physics_optics">Ottica</string>
    <string name="cat_quant_ph">Fisica Quantistica</string>

    <string name="cat_main_mathematics">Matematica</string>
    <string name="cat_math_ag">Geometria Algebrica</string>
    <string name="cat_math_at">Topologia Algebrica</string>
    <string name="cat_math_ap">Analisi delle PDE</string>
    <string name="cat_math_co">Combinatoria</string>
    <string name="cat_math_dg">Geometria Differenziale</string>
    <string name="cat_math_ds">Sistemi Dinamici</string>
    <string name="cat_math_lo">Logica</string>
    <string name="cat_math_nt">Teoria dei Numeri</string>
    <string name="cat_math_pr">Probabilità</string>
    <string name="cat_math_st">Statistica (Matematica)</string>

    <string name="cat_main_biology">Biologia</string>
    <string name="cat_q_bio_bm">Biomolecole</string>
    <string name="cat_q_bio_gn">Genomica</string>
    <string name="cat_q_bio_nc">Neuroni e Cognizione</string>
    <string name="cat_q_bio_pe">Popolazioni ed Evoluzione</string>

    <string name="cat_main_finance">Finanza</string>
    <string name="cat_q_fin_cp">Finanza Computazionale</string>
    <string name="cat_q_fin_gn">Finanza Generale</string>
    <string name="cat_q_fin_st">Finanza Statistica</string>
    <string name="cat_q_fin_tr">Trading e Microstruttura dei Mercati</string>

    <string name="cat_main_statistics">Statistica</string>
    <string name="cat_stat_ap">Applicazioni</string>
    <string name="cat_stat_co">Calcolo</string>
    <string name="cat_stat_me">Metodologia</string>
    <string name="cat_stat_ml">Apprendimento Automatico (Statistica)</string>
    <string name="cat_stat_th">Teoria della Statistica</string>

    <string name="cat_main_engineering_and_systems">Ingegneria e Sistemi</string>
    <string name="cat_eess_as">Processamento Audio e Vocale</string>
    <string name="cat_eess_iv">Processamento Immagini e Video</string>
    <string name="cat_eess_sp">Processamento dei Segnali</string>
    <string name="cat_eess_sy">Sistemi e Controllo</string>

    <string name="cat_main_economy">Economia</string>
    <string name="cat_econ_em">Econometria</string>
    <string name="cat_econ_gn">Economia Generale</string>
    <string name="cat_econ_th">Economia Teorica</string>
    <string name="title_paper_detail">Dettagli</string>
    <string name="username">username</string>
    <string name="pages">pagina</string>
    <string name="paper_keyword">keyword</string>
    <string name="find">Cerca</string>
    <string name="error">Errore nel caricamento dei dati</string>
    <string name="reload">Ricarica</string>
    <string name="search_hint">Cerca per titolo…</string>

    <string name="preferences_saved">Preferenze salvate!</string>
    <string name="select_at_least_one_interest">Seleziona almeno un interesse per continuare</string>
    <string name="pdf_link_not_available">Link PDF non disponibile.</string>
    <string name="pdf_load_error">Errore nel caricamento del PDF.</string>
    <string name="no_link_to_share">Nessun link da condividere.</string>
    <string name="name_saved">Nome salvato!</string>
    <string name="cannot_reply_to_example">Impossibile rispondere a questo commento d\'esempio</string>
    <string name="select_at_least_one_category_to_save">Seleziona almeno una categoria prima di salvare.</string>
    <string name="share_paper_via">Condividi paper tramite…</string>
    <string name="share_subject">Paper interessante: %1$s</string>
    <string name="share_body_text">Dai un\'occhiata a questo paper:\n\n*%1$s*\n\nAutori: %2$s\n\nLink: %3$s</string>
    <string name="name_cannot_be_empty">Il nome non può essere vuoto</string>

    <string name="settings_category_general">Generali</string>
    <string name="settings_category_appearance">Aspetto</string>

    <string name="settings_account_title">Account</string>
    <string name="settings_account_summary">Modifica il tuo nome utente</string>
    <string name="settings_account_dialog_title">Inserisci il tuo nome</string>

    <string name="settings_feed_title">Feed</string>
    <string name="settings_feed_summary">Scegli come visualizzare i paper</string>
    <string name="settings_feed_dialog_title">Scegli una modalità</string>

    <string name="settings_theme_title">Tema</string>
    <string name="settings_theme_summary">Scegli il tema chiaro, scuro o di sistema</string>
    <string name="settings_theme_dialog_title">Scegli un tema</string>

    <string name="settings_language_title">Lingua</string>
    <string name="settings_language_summary">Seleziona la lingua dell\'applicazione</string>

    <string name="settings_feed_mode_title">Modalità del Feed</string>
    <string name="settings_feed_mode_chronological">Cronologico (Più Recenti)</string>
    <string name="settings_feed_mode_random">Casuale (Scoperta)</string>
</resources>