<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_category_general">
        <Preference
            app:key="account_settings"
            app:title="@string/settings_account_title"
            app:summary="@string/settings_account_summary" />
        <Preference
            app:key="feed_settings"
            app:title="@string/settings_feed_title"
            app:summary="@string/settings_feed_summary" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_category_appearance">
        <Preference
            app:key="theme_settings"
            app:title="@string/settings_theme_title"
            app:summary="@string/settings_theme_summary" />
        <Preference
            app:key="language_preference"
            app:title="@string/settings_language_title"
            app:summary="@string/settings_language_summary" />
    </PreferenceCategory>
</PreferenceScreen>